--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ gl = "0.14.0"
 glium = "0.34.0"
 gtk = { version = "0.7", package = "gtk4" }
 libloading = "0.8.3"
+rand = "0.8.5"
 
 [dependencies.adw]
 package = "libadwaita"
