--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ epoxy = "0.1.0"
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 gl = "0.14.0"
 glium = "0.34.0"
+graphene-rs = "0.20.0"
 gtk = { version = "0.7", package = "gtk4" }
 libloading = "0.8.3"
 rand = "0.8.5"
